--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,9 @@ php:
   - 5.5
   - 5.4
   - 5.3
-script: phpunit tests/
+services:
+  - mysql
+before_script:
+  - composer install
+  - mysql -e 'create database testdb;'
+script: vendor/bin/phpunit tests/
