--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
 services:
   - mysql
 before_script:
+  - mysql --version
   - composer install
   - mysql -e 'create database testdb;'
   - mysql -e 'CREATE TABLE IF NOT EXISTS `testdb`.`Demo` (`key` varchar(255) NOT NULL,`value` text NOT NULL, PRIMARY KEY (`key`)) ENGINE=InnoDB DEFAULT CHARSET=utf8;'
