--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
       "php": ">=5.3"
    },
    "require-dev": {
-      "phpunit/phpunit": "3.7.*"
+      "phpunit/phpunit": "3.7.*",
+      "phpmd/phpmd": "1.5.*"
    },
    "autoload": {
       "psr-0": {
