--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
       "php": ">=5.3"
    },
    "require-dev": {
-      "phpunit/phpunit": "3.7.*",
-      "phpmd/phpmd": "1.5.*"
+      "phpunit/phpunit": "3.7.*"
    },
    "autoload": {
       "psr-0": {
